fix: add overflow-x hidden to html

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 html {
+    overflow-x: hidden;
     margin-right: calc(-1 * (100vw - 100%));
 }
 body {
